# CredX

./: .gitignore  LICENSE  README.md  __init__.py  generate_key.py  main.py  pyproject.toml  requirements_termux.sh  run.py
src/credx/: __init__.py  __main__.py  auth.py  config.py  crypto.py  handlers.py  ui.py  vault.py
src/credx/lib/: lexicon.json  riddle_gen.py
src/credx_v2/: __main__.py  config.py  handlers.py  ui.py
tests/: integration_full_flow.py  test_credx.py
