[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credx"
version = "1.9.2"
description = "Zero-Knowledge Password Vault with Supabase backend"
authors = [
    { name = "ralfarishi" }
]
dependencies = [
    "supabase>=2.4.0",
    "cryptography>=42.0.0",
    "argon2-cffi>=23.1.0",
    "rich>=13.7.0",
    "pyfiglet>=1.0.2",
    "python-dotenv>=1.0.1",
    "InquirerPy>=0.3.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
credx = "credx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["credx*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "PTH", "ERA", "PL"]
ignore = ["S101", "PLR2004"]
